kubernetes/infrastructure/controllers/weave-ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: weave-gitops
  namespace: flux-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`weave.local`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: traefik
      services:
        - name: ww-gitops-weave-gitops
          port: 9001
